Project add site

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -20,4 +20,5 @@
 </p>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
+<%= link_to 'Add Site', add_site_path(@project) %> |
 <%= link_to 'Back', projects_path %>
