Adds nav bar and basic formatting

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,11 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Project</h1>
-
-<p>
-  <strong>Project:</strong>
-  <%= @project.name %>
-</p>
+<%= link_to 'Projects', projects_path, class: "btn btn-secondary" %>
+<h2><%= @project.name %></h2>
 
 <p>
   <strong>Description:</strong>
@@ -14,10 +10,11 @@
 <p><strong>Number of Sites: </strong><%= @project.count_sites %> </p>
 
 <% if @project.sites.any? %>
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th>Site Name</th>
+      <th scope="col">Site Name</th>
+      <th scope="col">Go to</th>
     </tr>
   </thead>
   <tbody>
@@ -31,7 +28,5 @@
 </table>
 <% end %>
 
-
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Add Site', add_site_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Edit Project', edit_project_path(@project), class: "btn btn-secondary" %>
+<%= link_to 'Add New Site', add_site_path(@project), class: "btn btn-secondary" %>
