--- a/app/views/deployments/show.html.erb
+++ b/app/views/deployments/show.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Deployment</h1>
+<%= link_to 'Back', site_path(@deployment.site_id), class: "btn btn-secondary" %>
+
+<h2>Deployment</h2>
 
 <p>
   <strong>Deploy notes:</strong>
@@ -47,14 +49,14 @@
   <%= @deployment.unit %>
 </p>
 
+<%= link_to 'Edit', edit_deployment_path(@deployment), class: "btn btn-secondary" %>
+
+
 <h3>Import Measurement Data</h3>
 <%= form_tag import_measurements_path(@deployment.id), multipart: true do %>
-<%= file_field_tag :file %>
-<%= submit_tag "Upload Data" %>
+<%= file_field_tag :file, class: "btn btn-secondary" %>
+<%= submit_tag "Upload Data", class: "btn btn-secondary" %>
 <% end %>
-
-<%= link_to 'Edit', edit_deployment_path(@deployment) %>|
-<%= link_to 'Back', site_path(@deployment.site_id) %>
 
 <% if @deployment.measurements.any? %>
 <table>
