--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,10 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Site</h1>
+<%= link_to 'Project', project_path(@site.project_id), class: "btn btn-secondary" %>
+<h2><%= @site.name %></h2>
 
 <p>
-  <strong>Name:</strong>
-  <%= @site.name %>
+  <strong>Project Name:</strong>
+  <%= @site.project.name %>
 </p>
 
 <p>
@@ -13,18 +14,11 @@
 </p>
 
 <p>
-  <strong>Project Name:</strong>
-  <%= @site.project.name %>
-</p>
-
-
-<p>
-  <strong>Image:</strong>
   <%= image_tag @site.image, alt: "This is alt text", class: "this-class" %>
 </p>
 
 <% if @site.deployments.any? %>
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Deployed</th>
@@ -46,6 +40,5 @@
 </table>
 <% end %>
 
-<%= link_to 'Edit', edit_site_path(@site) %> |
-<%= link_to 'Add Deployment', add_deployment_path(@site) %> |
-<%= link_to 'Back', project_path(@site.project_id) %>
+<%= link_to 'Edit Site', edit_site_path(@site), class: "btn btn-secondary" %>
+<%= link_to 'Add New Deployment', add_deployment_path(@site), class: "btn btn-secondary" %>
