--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,19 +1,25 @@
 <p id="notice"><%= notice %></p>
 
 <%= link_to 'Projects', projects_path, class: "btn btn-secondary" %>
-<h2><%= @project.name %></h2>
 
-<p>
-  <strong>Description:</strong>
-  <%= @project.description %>
-</p>
-<p><strong>Number of Sites: </strong><%= @project.count_sites %> </p>
+
+<div class="row">
+  <div class="col-md-6">
+    <h2><%= @project.name %></h2>
+    <p><strong>Description:</strong><%= @project.description %></p>
+    <p><strong>Number of Sites: </strong><%= @project.count_sites %> </p>
+  </div>
+  <div id="map_project_show" class="col-md-6">
+  </div>
+</div>
 
 <% if @project.sites.any? %>
 <table class="table table-hover">
   <thead>
     <tr>
       <th scope="col">Site Name</th>
+      <th scope="col">Latitude</th>
+      <th scope="col">Longitude</th>
       <th scope="col">Go to</th>
     </tr>
   </thead>
@@ -21,6 +27,8 @@
     <% @project.sites.each do |site| %>
     <tr>
       <th scope="row"><%= site.name %></th>
+      <td><%= site.latitude %></td>
+      <td><%= site.longitude %></td>
       <td><%= link_to  "Site", site_path(site.id) %></td>
     </tr>
     <% end  %>
