--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -30,8 +30,8 @@
   <tbody>
     <% @site.deployments.each do |deployment| %>
     <tr>
-      <th scope="row"><%= deployment.deploy_date %></th>
-      <td><%= deployment.retrieve_date %></td>
+      <th scope="row"><%= deployment.deploy_date.to_formatted_s(:long_ordinal) %></th>
+      <td><%= deployment.retrieve_date.to_formatted_s(:long_ordinal) %></td>
       <td><%= deployment.retrieve_status %></td>
       <td><%= link_to  "Deployment", deployment_path(deployment.id) %></td>
     </tr>
