--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,6 @@
-#project_map_id {
-  height: 500px;
+#map_project_show {
+  height: 400px;
+  width: 100vw;
+  border-radius: 5px;
+  margin-bottom: 2em;
 }
