--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,6 @@
 
 <%= link_to 'Projects', projects_path, class: "btn btn-secondary" %>
 
-
 <div class="row">
   <div class="col-md-6">
     <h2><%= @project.name %></h2>
@@ -14,26 +13,28 @@
 </div>
 
 <% if @project.sites.any? %>
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th scope="col">Site Name</th>
-      <th scope="col">Latitude</th>
-      <th scope="col">Longitude</th>
-      <th scope="col">Go to</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @project.sites.each do |site| %>
-    <tr>
-      <th scope="row"><%= site.name %></th>
-      <td><%= site.latitude %></td>
-      <td><%= site.longitude %></td>
-      <td><%= link_to  "Site", site_path(site.id) %></td>
-    </tr>
-    <% end  %>
-  </tbody>
-</table>
+<div class="row">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Site Name</th>
+        <th scope="col">Latitude</th>
+        <th scope="col">Longitude</th>
+        <th scope="col">Go to</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @project.sites.each do |site| %>
+      <tr>
+        <th scope="row"><%= site.name %></th>
+        <td><%= site.latitude.round(6) %></td>
+        <td><%= site.longitude.round(6) %></td>
+        <td><%= link_to  "Site", site_path(site.id) %></td>
+      </tr>
+      <% end  %>
+    </tbody>
+  </table>
+</div>
 <% end %>
 
 <%= link_to 'Edit Project', edit_project_path(@project), class: "btn btn-secondary" %>
