--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Eco Temp</h1>
+    <hr>
+    <p class="lead">Supporting the management of environmental temperature information for ecological studies. </p>
+  </div>
+</div>
