--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
 
-  <title>Enviro-Temp</title>
+  <title>Eco-Temp</title>
   <%= include_gon %>
 
   <%= csrf_meta_tags %>
