--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -1,32 +1,42 @@
 <%= form_with(model: site, local: true) do |form| %>
-  <% if site.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(site.errors.count, "error") %> prohibited this site from being saved:</h2>
+<% if site.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(site.errors.count, "error") %> prohibited this site from being saved:</h2>
 
-      <ul>
-      <% site.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <ul>
+    <% site.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
+<div class="field">
+  <%= form.label :name %>
+  <%= form.text_field :name %>
+</div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_field :description %>
-  </div>
+<div class="field">
+  <%= form.label :description %>
+  <%= form.text_field :description %>
+</div>
 
-  <div class="field">
-    <%= form.label :project_id %>
-    <%= form.text_field :project_id %>
-  </div>
+<div class="field">
+  <%= form.label :latitude %>
+  <%= form.text_field :latitude %>
+</div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+<div class="field">
+  <%= form.label :longitude %>
+  <%= form.text_field :longitude %>
+</div>
+
+<div class="field">
+  <%= form.label :project_id %>
+  <%= form.text_field :project_id %>
+</div>
+
+<div class="actions">
+  <%= form.submit %>
+</div>
 <% end %>
