--- a/app/views/deployments/edit.html.erb
+++ b/app/views/deployments/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Deployment</h1>
+<h1>Edit Deployment Data</h1>
 
 <%= render 'form', deployment: @deployment %>
 
-<%= link_to 'Show', @deployment %> |
-<%= link_to 'Back', deployments_path %>
+<%= link_to 'Cancel', @deployment %>
