--- a/app/views/deployments/_form.html.erb
+++ b/app/views/deployments/_form.html.erb
@@ -10,47 +10,53 @@
 </div>
 <% end %>
 
-<div class="field">
+<div class="form-group">
   <%= form.label :deploy_notes %>
   <%= form.text_area :deploy_notes, class: 'form-control' %>
 </div>
 
-<div class="field">
+<div class="form-group">
   <%= form.label :deploy_date %>
   <%= form.date_select :deploy_date %>
 </div>
 
-<div class="field">
+<div class="form-group">
   <%= form.label :deploy_time %>
   <%= form.time_select :deploy_time %>
 </div>
 
-<div class="field">
+<div class="form-group">
   <%= form.label :retrieve_status %>
   <%= form.select :retrieve_status, ['OK', 'Dry', 'Burried', 'Lost'], {include_blank: true}, { class: 'form-control' } %>
 </div>
 
-<div class="field">
+<div class="form-group">
   <%= form.label :retrieve_notes %>
-  <%= form.text_area :retrieve_notes, class: 'form-control' %>
+  <%= form.text_area :retrieve_notes, class: "form-control"  %>
 </div>
 
-<div class="field">
+<div class="form-group">
   <%= form.label :retrieve_date %>
-  <%= form.date_select :retrieve_date, { include_blank: true } %>
+  <div class="d-flex flex-row justify-content-between align-items-center">
+    <%= form.date_select :retrieve_date, { include_blank: true }, { class: "form-control mr-2" } %>
+  </div>
 </div>
 
-<div class="field">
+<div class="form-group">
   <%= form.label :retrieve_time %>
-  <%= form.time_select :retrieve_time, { include_blank: true } %>
+  <i class="fa fa-clock-o" aria-hidden="true"></i>
+  <div class="d-flex flex-row justify-content-between align-items-center">
+    <%= form.time_select :retrieve_time, { include_blank: true }, { class: "form-control mr-2" } %>
+  </div>
+
 </div>
 
-<div class="field">
+<div class="form-group">
   <%= form.label :site_id %>
   <%= form.text_field :site_id, class: 'form-control' %>
 </div>
 
-<div class="field">
+<div class="form-group">
   <%= form.label :unit_id %>
   <%= collection_select :deployment, :unit_id, Unit.all, :id, :serial, { include_blank: true, multiple: false}, { class: 'form-control' } %>
 </div>
