--- a/app/views/deployments/edit.html.erb
+++ b/app/views/deployments/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', deployment: @deployment %>
 
-<%= link_to 'Cancel', @deployment %>
+<%= link_to 'Cancel', @deployment, class: "btn btn-warning" %>
