--- a/app/views/deployments/show.html.erb
+++ b/app/views/deployments/show.html.erb
@@ -1,77 +1,76 @@
-<%= link_to 'Back', site_path(@deployment.site_id), class: "btn btn-secondary" %>
+<%= link_to 'Back to Site', site_path(@deployment.site_id), class: "btn btn-info" %>
 
 <h2>Deployment</h2>
+<hr>
 
-<p>
-  <strong>Deploy notes:</strong>
-  <%= @deployment.deploy_notes %>
-</p>
+<div class="row">
+  <div class="col-md-6">
+    <strong>Site:</strong>
+    <p><%= @deployment.site.name %></p>
+  </div>
+  <div class="col-md-6">
+    <strong>Logger Unit:</strong>
+    <p><%= @deployment.unit.serial %></p>
+  </div>
+</div>
+<hr>
 
-<p>
-  <strong>Deploy date:</strong>
-  <%= @deployment.deploy_date %>
-</p>
+<div class="row">
+  <div class="col-md-6">
+    <h3>Deployment</h3>
+    <hr>
 
-<p>
-  <strong>Deploy time:</strong>
-  <%= @deployment.deploy_time %>
-</p>
+    <strong>Deploy date:</strong>
+    <p><%= @deployment.deploy_date.to_formatted_s(:long_ordinal) %></p>
+    <hr>
 
-<p>
-  <strong>Retrieve status:</strong>
-  <%= @deployment.retrieve_status %>
-</p>
+    <strong>Deploy time:</strong>
+    <p><%= @deployment.deploy_time.to_formatted_s(:time) %></p>
+    <hr>
 
-<p>
-  <strong>Retrieve notes:</strong>
-  <%= @deployment.retrieve_notes %>
-</p>
+    <strong>Deploy notes:</strong>
+    <p><%= @deployment.deploy_notes %></p>
+  </div>
 
-<p>
-  <strong>Retrieve date:</strong>
-  <%= @deployment.retrieve_date %>
-</p>
+  <div class="col-md-6">
 
-<p>
-  <strong>Retrieve time:</strong>
-  <%= @deployment.retrieve_time %>
-</p>
+    <h3>Retrieval</h3>
+    <hr>
 
-<p>
-  <strong>Site:</strong>
-  <%= @deployment.site %>
-</p>
+    <strong>Retrieve date:</strong>
+    <p><%= @deployment.display_retrieve_date %></p>
+    <hr>
 
-<p>
-  <strong>Unit:</strong>
-  <%= @deployment.unit %>
-</p>
+    <strong>Retrieve time:</strong>
+    <p><%= @deployment.display_retrieve_time %></p>
+    <hr>
 
-<%= link_to 'Edit', edit_deployment_path(@deployment), class: "btn btn-secondary" %>
+    <strong>Retrieve notes:</strong>
+    <p><%= @deployment.retrieve_notes %></p>
+    <hr>
+    <strong>Retrieve status:</strong>
+    <p><%= @deployment.retrieve_status %></p>
 
-<%= line_chart @deployment.measurements.group_by_day(:moment).maximum(:temperature) %>
+  </div>
+</div>
+<hr>
 
-<h3>Import Measurement Data</h3>
-<%= form_tag import_measurements_path(@deployment.id), multipart: true do %>
-<%= file_field_tag :file, class: "btn btn-outline-secondary" %>
-<%= submit_tag "Upload Data", class: "btn btn-secondary" %>
-<% end %>
+<div class="row">
+  <div class="col-md-4">
+    <%= link_to 'Edit Deployment', edit_deployment_path(@deployment), class: "btn btn-primary" %>
+  </div>
+  <div class="col-md-8">
+    <p class="lead">Import Measurement Data</p>
+    <%= form_tag import_measurements_path(@deployment.id), multipart: true do %>
+    <%= file_field_tag :file, class: "btn btn-outline-primary" %>
+    <%= submit_tag "Upload Data", class: "btn btn-primary" %>
+    <% end %>
+
+  </div>
+</div>
+<hr>
 
 <% if @deployment.measurements.any? %>
-<table>
-  <thead>
-    <tr>
-      <th>Date Time</th>
-      <th>Temperature</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @deployment.measurements.each do |measurement| %>
-    <tr>
-      <th scope="row"><%= measurement.moment %></th>
-      <td><%= measurement.temperature %></td>
-    </tr>
-    <% end  %>
-  </tbody>
-</table>
+<h4>Total Measurements: <%= @deployment.measurements.count %></h4>
+<%= line_chart @deployment.measurements.group_by_day(:moment).maximum(:temperature) %>
 <% end %>
