--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,23 +1,27 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Project', project_path(@site.project_id), class: "btn btn-secondary" %>
+<%= link_to 'Project', project_path(@site.project_id), class: "btn btn-info" %>
 <h2><%= @site.name %></h2>
 
-<p>
-  <strong>Project Name:</strong>
-  <%= @site.project.name %>
-</p>
+<div class="row">
+  <div class="col-md-6">
+    <strong>Project Name:</strong>
+    <p><%= @site.project.name %></p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @site.description %>
-</p>
+    <strong>Description:</strong>
+    <p><%= @site.description %></p>
 
-<p>
-  <%= image_tag @site.image, alt: "This is alt text", class: "this-class" %>
-</p>
+  </div>
+  <div class="col-md-6">
+    <p>
+      <%= image_tag @site.image, alt: "This is alt text", class: "this-class" %>
+    </p>
+
+  </div>
+</div>
 
 <% if @site.deployments.any? %>
+<h4>Logger Deployments</h4>
 <table class="table">
   <thead>
     <tr>
@@ -40,5 +44,5 @@
 </table>
 <% end %>
 
-<%= link_to 'Edit Site', edit_site_path(@site), class: "btn btn-secondary" %>
-<%= link_to 'Add New Deployment', add_deployment_path(@site), class: "btn btn-secondary" %>
+<%= link_to 'Edit Site', edit_site_path(@site), class: "btn btn-primary" %>
+<%= link_to 'Add New Deployment', add_deployment_path(@site), class: "btn btn-primary" %>
