--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -11,6 +11,16 @@
 </div>
 <% end %>
 
+
+<hr>
+
+<div class="form-group">
+  <%= form.file_field :image %>
+</div>
+
+<hr>
+
+
 <div class="field">
   <%= form.label :name %>
   <%= form.text_field :name %>
