--- a/app/views/sites/edit.html.erb
+++ b/app/views/sites/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form', site: @site %>
 
-<%= link_to 'Show', @site %> |
-<%= link_to 'Back', sites_path %>
+<%= link_to 'Cancel', @site, class: "btn btn-warning" %>
