--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -14,39 +14,59 @@
 
 <hr>
 
+<div class="row">
+  <div class="col-md-6">
+    <div class="form-group">
+      <%= form.label :name %>
+      <%= form.text_field :name, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="form-group">
+      <%= form.label :project_id %>
+      <%= form.text_field :project_id, class: 'form-control' %>
+    </div>
+  </div>
+</div>
+
 <div class="form-group">
-  <%= form.file_field :image %>
+  <%= form.label :description %>
+  <%= form.text_area :description, class: 'form-control' %>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <div class="form-group">
+      <%= form.label :latitude %>
+      <%= form.text_field :latitude, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="form-group">
+      <%= form.label :longitude %>
+      <%= form.text_field :longitude, class: 'form-control' %>
+    </div>
+  </div>
 </div>
 
 <hr>
 
 
-<div class="field">
-  <%= form.label :name %>
-  <%= form.text_field :name %>
+
+<div class="form-group">
+  <label class="btn btn-secondary">Upload Site Image <%= form.file_field :image, style: 'display:none;' %></label>
+
 </div>
 
-<div class="field">
-  <%= form.label :description %>
-  <%= form.text_field :description %>
-</div>
 
-<div class="field">
-  <%= form.label :latitude %>
-  <%= form.text_field :latitude %>
-</div>
 
-<div class="field">
-  <%= form.label :longitude %>
-  <%= form.text_field :longitude %>
-</div>
 
-<div class="field">
-  <%= form.label :project_id %>
-  <%= form.text_field :project_id %>
-</div>
+
+<hr>
 
 <div class="actions">
-  <%= form.submit %>
+  <%= form.submit class: "btn btn-primary" %>
 </div>
 <% end %>
