--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
+<div class="card border-0 shadow mb-4">
+  <div class="card-body">
     <h1 class="display-4">Eco Temp</h1>
     <hr>
     <p class="lead">Supporting the management of environmental temperature information for ecological studies. </p>
   </div>
 </div>
+<%= link_to  "Get Started", projects_path, class: "btn btn-primary shadow" %>
