Adds basic breadcrumb nav

--- a/app/views/deployments/show.html.erb
+++ b/app/views/deployments/show.html.erb
@@ -1,4 +1,13 @@
-<%= link_to 'Back to Site', site_path(@deployment.site_id), class: "btn btn-info" %>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><%= link_to 'Projects', projects_path %></li>
+    <li class="breadcrumb-item"><%= link_to 'Project', project_path(@deployment.site.project_id) %></li>
+    <li class="breadcrumb-item"><%= link_to 'Site', project_path(@deployment.site_id) %></li>
+
+    <li class="breadcrumb-item active" aria-current="page">Deployment: <%= @deployment.deploy_date.to_formatted_s(:long_ordinal) %></li>
+  </ol>
+</nav>
+
 
 <h2>Deployment</h2>
 <hr>
