--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Projects</h1>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item active">Projects</li>
+  </ol>
+</nav>
+<h2>Projects</h2>
 
 <%= render  @projects %>
 
