--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Projects', projects_path, class: "btn btn-secondary" %>
+
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><%= link_to 'Projects', projects_path %></li>
+    <li class="breadcrumb-item active" aria-current="page">Project: <%= @project.name %></li>
+  </ol>
+</nav>
 
 <div class="row">
   <div class="col-md-6">
